--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
 }
 
 figure {
-    size: fit-content;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -36,6 +35,27 @@ input {
     display: flex;
     flex-direction: column;
     font-size: 1.1rem;
+}
+
+input {
+    text-decoration: none;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.144);
+    border-width: 1px;
+    border-radius: 5px;
+}
+
+input:focus {
+    outline: none;
+    border-width: 2px;
+    border-color: #A5CCDD;
+}
+
+
+input:valid {
+    outline: none;
+    border-width: 2px;
+    border-color: green;
 }
 
 .wrapper {
@@ -82,7 +102,7 @@ footer {
     background-color: #596D48;
 }
 
-footer p {
+footer span {
     margin-top: 0px;
     color: #596D48;
     cursor: pointer;
