--- a/style.css
+++ b/style.css
@@ -2,32 +2,56 @@ body {
     display: flex;
     font-family: 'Roboto', sans-serif;
     gap: 60px;
-    margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    max-width: 1440px;
+    border-style: solid;
+    border-radius: 15px;
+    border-width: 5px;
+    border-color: rgba(76, 0, 255, 0.664);
 }
 
 figure {
     display: flex;
     flex-direction: column;
+    width: 35vw;
+    height: 80vh;
     margin: 0;
 }
 
 figure img {
-    width: 35vw;
-    height: 100vh;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.486);
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
     object-fit: cover;
 }
 
 figcaption {
     text-align: center;
-    font-size: 5rem;
-    color: white;
-    margin-top: -82vh;
+    font-family: 'Josefin Sans', sans-serif;
+    padding-top: 10px;
+    font-size: 3rem;
+    color: rgb(255, 255, 255);
+    padding: 34px;
+    font-weight: bold;
+    letter-spacing: 1rem;
+    margin-top: -64vh;
     background-color: rgba(0, 0, 0, 0.295);
 }
 
 h1 {
     font-size: 1.5rem;
+    font-weight: lighter;
 }
+
+h1 i {
+    color: rgba(76, 0, 255, 0.664);
+    text-shadow: 1px 2px 3px rgba(76, 0, 255, 0.664);
+}
+
+
 
 
 label,
@@ -35,6 +59,13 @@ input {
     display: flex;
     flex-direction: column;
     font-size: 1.1rem;
+    letter-spacing: 0.1rem;
+}
+
+label {
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.795);
 }
 
 input {
@@ -48,7 +79,7 @@ input {
 input:focus {
     outline: none;
     border-width: 2px;
-    border-color: #A5CCDD;
+    border-color: rgba(76, 0, 255, 0.664);
 }
 
 
@@ -62,15 +93,19 @@ input:valid {
     width: 100vw;
     margin-top: 60px;
 
+
 }
 
 h3 {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     margin-left: 30px;
+    color: rgba(76, 0, 255, 0.664);
+
 }
 
 .formWrapper {
-    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.274);
+
+    box-shadow: 5px 0px 8px rgba(0, 0, 0, 0.274);
     padding: 30px;
     margin-left: -60px;
     margin-top: 60px;
@@ -99,15 +134,23 @@ footer {
     padding-left: 40px;
     border-radius: 10px;
     border: none;
-    background-color: #596D48;
+    background-color: #FA8BFF;
+    background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.322);
+    transition: 250ms;
+}
+
+.createAccount:hover {
+    color: rgba(76, 0, 255, 0.664);
 }
 
 footer span {
     margin-top: 0px;
-    color: #596D48;
+    color: rgba(76, 0, 255, 0.664);
     cursor: pointer;
 }
 
 h4 {
     display: flex;
+    color: rgba(0, 0, 0, 0.795);
 }
