--- a/style.css
+++ b/style.css
@@ -74,6 +74,16 @@ label {
     color: rgba(0, 0, 0, 0.795);
 }
 
+input::placeholder {
+    color: rgba(76, 0, 255, 0.664);
+    opacity: 0.2;
+}
+
+.ex {
+    font-size: 0.8rem;
+    color: rgba(220, 20, 60, 0.705);
+}
+
 input {
     font-size: 1.1rem;
     text-decoration: none;
