--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     border-radius: 15px;
     border-width: 5px;
     border-color: rgba(76, 0, 255, 0.664);
+    box-shadow: 0px 0px 60px rgba(170, 138, 243, 0.548);
 }
 
 /*MAIN IMAGE*/
@@ -157,4 +158,11 @@ footer span {
 
 h4 {
     color: rgba(0, 0, 0, 0.795);
+}
+
+@media only screen and (max-width: 1320px) {
+    figcaption {
+        transform: rotate(90deg);
+    }
+
 }
